@@ -1,3 +1,8 @@
+2002-11-09  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSObject.m: use NSString implementation of
+	([descriptionWithLocale:indent:to:])
+
 2002-11-07 02:21  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/GSString.m: (-makeImmutableCopyOnFail:): Set isa to correct
